Added delete file, create file, and rename newly created file features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,29 @@
 
     <string name="open_using">Open using…</string>
 
-    <string name="read_external_storage_permission_rationale">The app will not be able to read the storage if this permission is denied making it unusable.</string>
+    <string name="external_storage_permission_rationale">The app will not be able to read the storage if this permission is denied making it unusable.</string>
     <string name="permission_request">Read External Storage is a crucial permission for the app\'s functionality. Please enable it in your settings to be able to use this app.</string>
     <string name="show_settings">Show Settings</string>
 
     <string name="empty_folder_indicator_item_text">(Folder is empty)</string>
+
+    <string name="saving_file">Saving File</string>
+    <string name="file_saved_successfully">File Saved Successfully</string>
+    <string name="file_created_successfully">File Created Successfully</string>
+    <string name="error_while_saving">An error occurred while saving the file.</string>
+    <string name="save">Save</string>
+
+    <string name="enter_file_name">Enter file name</string>
+    <string name="cannot_write_to_folder">Cannot write to this folder</string>
+    <string name="file_cannot_be_created">File cannot be created</string>
+    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
+    <string name="rename">Rename</string>
+    <string name="file_cannot_be_renamed">File cannot be renamed</string>
+    <string name="file_already_exists">File with the same name already exists</string>
+    <string name="file_deleted_successfully">File deleted successfully</string>
+    <string name="file_cannot_be_deleted">File cannot be deleted</string>
+    <string name="directory_delete_warning">All files in the folder will be lost forever. Are you sure you want to continue?</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="delete_file">Delete File</string>
+    <string name="filename_cannot_start_with_a_dot">File name cannot start with a dot (.)</string>
 </resources>
