Added BottomSheetDialog to give users an option for renaming or deleting the file item onLongClick Added code prompting the user before hand whether the file can be renamed or not

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="folder_cannot_be_created">Folder Created Successfully</string>
     <string name="folder_saved_successfully">Folder Saved Successfully</string>
     <string name="folder_cannot_be_renamed">Folder cannot be renamed</string>
+    <string name="delete">Delete</string>
+
 </resources>
