Added support for sharing files using the BottomSheetDialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Pulsar File Explorer</string>
 
     <string name="open_using">Open using…</string>
+    <string name="share_using">Share using…</string>
 
     <string name="external_storage_permission_rationale">The app will not be able to read the storage if this permission is denied making it unusable.</string>
     <string name="permission_request">Read External Storage is a crucial permission for the app\'s functionality. Please enable it in your settings to be able to use this app.</string>
@@ -33,5 +34,6 @@
     <string name="folder_saved_successfully">Folder Saved Successfully</string>
     <string name="folder_cannot_be_renamed">Folder cannot be renamed</string>
     <string name="delete">Delete</string>
+    <string name="share">Share</string>
 
 </resources>
