Added support to delete folders containing files Added support to enable users to rename files with a different file extension Refactored unused resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
     <string name="folder_cannot_be_renamed">Folder cannot be renamed</string>
     <string name="delete">Delete</string>
     <string name="share">Share</string>
-
+    <string name="delete_folder">Delete Folder</string>
+    <string name="folder_deleted_successfully">Folder Deleted Successfully</string>
+    <string name="recursive_folder_deletion_error">Error while deleting folder. Partial deletion may have taken place.</string>
 </resources>
