Refactored the project structure Renamed FileListActivity.kt to FilesListActivity.kt Refactored code to make StorageDevicesActivity.kt the main activity of the app Refactored the getMimeType function to be a part of the Helper.kt object where it is more appropriate

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="delete_folder">Delete Folder</string>
     <string name="folder_deleted_successfully">Folder Deleted Successfully</string>
     <string name="recursive_folder_deletion_error">Error while deleting folder. Partial deletion may have taken place.</string>
+    <string name="refresh">Refresh</string>
+    <string name="refreshed_successfully">Refreshed Successfully. Storage devices list updated.</string>
 </resources>
